# synapse

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  PROJECT_PLAN.md  README.md  RESEARCH_DIRECTIONS.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: apps.py  graph.py  jobs.py  synthesis.py  tools.py  workflows.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: engine.py  models.py
backend/app/graph/: client.py  queries.py
backend/app/llm/: client.py  registry.py
backend/app/llm/prompts/: description_generation.yaml  entity_action_labeling.yaml  entity_extraction.yaml  normalization.yaml  workflow_hypothesis.yaml
backend/app/pipeline/: base.py  compression.py  discovery.py  extractor.py  graph_builder.py  semantic_engine.py  synthesizer.py  workflow_discovery.py
backend/app/schemas/: api.py  pipeline.py
backend/app/storage/: minio.py
backend/app/tasks/: celery_app.py  pipeline.py
backend/app/templates/python_mcp/: server.py.j2
backend/app/templates/typescript_mcp/: server.ts.j2
evaluation/: .env.example  .gitignore  FINDINGS.md  README.md  pyproject.toml  run_experiment.py
evaluation/evalkit/: __init__.py  cli.py  conditions.py  config.py  experiment.py  fixtures.py  mcp_bridge.py  render.py  report.py  server_host.py  stats.py  store.py  synapse_client.py  toolset.py  verify.py
evaluation/evalkit/agent/: __init__.py  judge.py  llm.py  runner.py  transcript.py
evaluation/evalkit/sandbox/: __init__.py  runner.py  simulator.py  state.py
evaluation/evalkit/tasks/: __init__.py  schema.py
evaluation/evalkit/tasks/suites/: petstore.yaml
evaluation/scripts/: derisk_agent_loop.py  derisk_mcp_spine.py  record_transcripts.py  verify_server.py
evaluation/tests/: test_agent_loop.py  test_mcp_spine.py  test_sandbox.py  test_stats.py  test_toolset.py  test_verify.py
frontend/: README.md
frontend/explorer/: app.js  console.css  console.html  console.js  index.html  make_sample_graph.py  sample-graph.js  sample-graph.json  scenarios.js  styles.css  transcripts.js  transcripts.json
scripts/: e2e_test.py  setup_env.py
tests/fixtures/: petstore.yaml
