[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse-backend"
version = "0.1.0"
description = "SYNAPSE — Semantic API Protocol Synthesis Engine"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Database
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",

    # Graph database
    "neo4j>=5.21.0",

    # Task queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",

    # Object storage
    "minio>=7.2.0",

    # LLM clients
    "openai>=1.35.0",
    "anthropic>=0.28.0",
    "tiktoken>=0.7.0",

    # ML / clustering
    "hdbscan>=0.8.38",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",

    # HTTP
    "httpx>=0.27.0",

    # Templating
    "jinja2>=3.1.4",

    # YAML / config
    "pyyaml>=6.0.1",

    # $ref resolution for OpenAPI
    "jsonref>=1.1.0",

    # OpenAPI spec validation
    "openapi-spec-validator>=0.7.1",

    # Text / NLP utilities
    "inflect>=7.3.0",

    # Security
    "cryptography>=42.0.0",

    # Retry logic
    "tenacity>=8.4.0",

    # Structured logging
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
